# AllamBik

./: .gitignore  README.md  app_current.bak  calibrate_detection.py  main.py  main_paginated.py  main_paginated_cards.py  main_pagination_fixed.py  main_viewmodel_current.bak  main_window_backup.py  main_window_broken.py  main_window_current.bak  main_with_pagination.py  pagination_system.py  pagination_with_cards.py  pagination_with_cards_correct.py  pagination_with_dict.py  pyproject.toml  run.py  test_highlight_detection.py  test_ocr_complete.py  test_simple_fixed.py  test_ui_performance.py
backup_20250823_101740/: main_viewmodel.py.backup
extractions/: extraction_20250711_191649.json  extraction_20250711_191649.txt  extraction_20250711_193235.json  extraction_20250711_193235.txt  extraction_20250713_182616.json  extraction_20250713_182616.txt  extraction_20250713_185914.json  extraction_20250713_185914.txt  extraction_20250713_214031.json  extraction_20250713_214031.txt  extraction_20250714_093428.json  extraction_20250714_093428.txt  extraction_20250714_093642.json  extraction_20250714_093642.txt  extraction_20250714_100028.json  extraction_20250714_100028.txt  extraction_20250714_103845.json  extraction_20250714_103845.txt  extraction_20250714_110031.json  extraction_20250714_110031.txt  extraction_20250714_112126.json  extraction_20250714_112126.txt  extraction_20250714_114057.json  extraction_20250714_114057.txt  extraction_20250714_120021.json  extraction_20250714_120021.txt  extraction_20250714_121737.json  extraction_20250714_121737.txt  (+42 more)
(+26 files in other folders)
